@@ -20,7 +20,7 @@ number needed to treat (Porta (2014), <doi:10.1093\%2Facref\%2F9780199976720.001
 \tabular{ll}{
 Package: \tab MKclass\cr
 Type: \tab Package\cr
-Version: \tab 0.3\cr
+Version: \tab 0.4\cr
 Date: \tab 2020-10-03\cr
 Depends: \tab R(>= 4.0.0)\cr
 Imports: \tab stats\cr
